# PolygonEditor-ComputerGraphics-2024

./: .clang-format  .gitignore  CMakeLists.txt  DrawCanvas.h  README.md  clang-format.sh  drawcanvas.cpp  drawcanvas.h  main.cpp  mainwindow.cpp  mainwindow.ui
include/: Edge.h  EdgeItem.h  MainWindow.h  PolygonItem.h  VertexItem.h  mainwindow.h
include/Constraints/: BaseEdgeConstraint.h  BaseVertexConstraint.h  C1VertexConstraint.h  ConstraintChecker.h  G1VertexConstraint.h  HorizontalEdgeConstraint.h  LengthEdgeConstraint.h  VerticalEdgeConstraint.h
include/Edge/: BaseEdgeItem.h  BezierEdgeItem.h  EdgeItemBase.h  EdgeItemNormal.h  PolygonEdgeItem.h  StandaloneEdgeItem.h
include/Vertex/: BaseVertexItem.h  ControlVertexItem.h  PolygonVertexItem.h
src/: BaseEdgeItem.cpp  BaseVertexConstraint.cpp  BaseVertexItem.cpp  BezierEdgeItem.cpp  C1VertexConstraint.cpp  ConstraintChecker.cpp  ControlVertexItem.cpp  DrawCanvas.cpp  Edge.cpp  EdgeItem.cpp  EdgeItemBase.cpp  EdgeItemNormal.cpp  G1VertexConstraint.cpp  HorizontalEdgeConstraint.cpp  LengthEdgeConstraint.cpp  MainWindow.cpp  PolygonEdgeItem.cpp  PolygonItem.cpp  PolygonVertexItem.cpp  StandaloneEdgeItem.cpp  VertexItem.cpp  VerticalEdgeConstraint.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
tests/: PolygonTests.cc
